Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,5 +23,5 @@ steps:
     git pull --all
     git add .
     git commit -m "Add latest changes"
-    git push https://$(git_token)@github.com/IT-Labs/openmrs-esm-core.git -f
+    git push https://$(git_token)@github.com/IT-Labs/$(repo_name).git -f
   displayName: 'Run git sync'
